--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost/dna
+spring.datasource.url=jdbc:mysql://db:3306/dna
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # = JPA / HIBERNATE
