--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:mysql://db:3306/dna
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://dna-dev.cgrmy4m9h9qq.us-east-2.rds.amazonaws.com:5432/dnadev
+spring.datasource.username=postgres
+spring.datasource.password=Tiburcio2019
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
