Add prod database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://dna-dev.cgrmy4m9h9qq.us-east-2.rds.amazonaws.com:5432/dnadev
+#spring.datasource.url=jdbc:postgresql://dna-dev.cgrmy4m9h9qq.us-east-2.rds.amazonaws.com:5432/dnadev
+spring.datasource.url=jdbc:postgresql://dna-prod.cgrmy4m9h9qq.us-east-2.rds.amazonaws.com:5432/dnaprod
 spring.datasource.username=postgres
 spring.datasource.password=Tiburcio2019
 spring.datasource.driver-class-name=org.postgresql.Driver
