--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>dna</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>dna</name>
-	<description>Demo project for Spring Boot</description>
+	<description>DNA detect API</description>
 
 	<properties>
 		<java.version>1.8</java.version>
