--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
+# = SERVER CONFIG
 # ===============================
-# = DATA SOURCE
-# ===============================
-# Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://dna-dev.cgrmy4m9h9qq.us-east-2.rds.amazonaws.com:5432/dnadev
-#spring.datasource.url=jdbc:postgresql://dna-prod.cgrmy4m9h9qq.us-east-2.rds.amazonaws.com:5432/dnaprod
-spring.datasource.username=postgres
-spring.datasource.password=Tiburcio2019
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# = JPA / HIBERNATE
-# ===============================
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server.port=8080
+server.servlet.context-path= /api
+spring.profiles.include=${env}
