--- a/devops/docker/Dockerfile
+++ b/devops/docker/Dockerfile
@@ -1,10 +1,7 @@
-FROM maven:3.5.3-jdk-8-alpine as target
+FROM maven:3.5.3-jdk-8-alpine
 WORKDIR /dna-api
-COPY pom.xml .
-RUN mvn dependency:go-offline
-
 COPY . .
-RUN mvn clean install
+RUN mvn -Denv=prod clean install
 RUN rm -rf ~/.m2/repository
 
 ENTRYPOINT ["java","-jar","target/dna-0.0.1-SNAPSHOT.jar"]
